Implement structured security logging system across authentication and session management
- Replaced console.log statements with structured logging using SecurityLogger in:
  - Change Password API
  - Forgot Password API
  - Reset Password API
  - Sign In API
  - Sign Up API
  - AAL Manager for authentication level upgrades and downgrades
  - Device Sessions management
  - Error handling in API responses
  - Middleware for authentication and rate limiting

- Added comprehensive logging for security events including:
  - Authentication failures
  - Password reset attempts
  - Device session management
  - Rate limiting violations
  - API errors

- Introduced SecurityLogger class with features such as:
  - PII sanitization
  - Rate limiting for log events
  - Real-time alerting for critical events
  - Database storage for security events with proper indexing

- Enhanced security event context enrichment from HTTP requests
- Updated related files and interfaces to support new logging functionality

--- a/.shrimp/launchsaasfast/tasks.json
+++ b/.shrimp/launchsaasfast/tasks.json
@@ -5,10 +5,10 @@
       "name": "Implement Security Event Logging System",
       "description": "Replace existing console.log statements with structured security logging system. Create comprehensive event tracking for authentication, authorization, and security-related actions with proper metadata enrichment.",
       "notes": "Ensure PII is properly sanitized in logs. Include rate limiting to prevent log flooding. Add proper indexing for query performance.",
-      "status": "in_progress",
+      "status": "completed",
       "dependencies": [],
       "createdAt": "2025-07-10T11:54:15.350Z",
-      "updatedAt": "2025-07-10T11:54:45.998Z",
+      "updatedAt": "2025-07-10T12:33:20.914Z",
       "relatedFiles": [
         {
           "path": "lib/security-logger.ts",
@@ -37,7 +37,9 @@
       ],
       "implementationGuide": "1. Create lib/security-logger.ts with structured logging\\n2. Define security event types and schemas\\n3. Replace console.log throughout codebase with structured events\\n4. Add enrichment with IP, user-agent, device info\\n5. Store events in database table with proper indexing\\n\\nPseudocode:\\n```typescript\\nclass SecurityLogger {\\n  async logEvent(type: SecurityEventType, data: SecurityEventData, context?: EventContext) {\\n    const event = {\\n      id: crypto.randomUUID(),\\n      type,\\n      userId: context?.userId,\\n      deviceSessionId: context?.deviceSessionId,\\n      ipAddress: context?.ipAddress,\\n      userAgent: context?.userAgent,\\n      data: this.sanitizeData(data),\\n      timestamp: new Date(),\\n      severity: this.determineSeverity(type)\\n    };\\n    \\n    // Store in database\\n    await this.storeEvent(event);\\n    \\n    // Real-time alerting for critical events\\n    if (event.severity === 'CRITICAL') {\\n      await this.sendAlert(event);\\n    }\\n  }\\n}\\n```",
       "verificationCriteria": "Security logging system captures all important events, properly sanitizes data, stores structured events in database, and replaces existing console.log statements throughout the codebase.",
-      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering."
+      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering.",
+      "summary": "Successfully completed Security Event Logging System implementation. All console.log statements across authentication routes (signin, signup, change-password, forgot-password, reset-password) and system components (middleware, AAL manager, TOTP manager, device sessions, error handler) have been replaced with structured SecurityLogger events. The system now provides comprehensive security event tracking with PII sanitization, rate limiting, database storage via Supabase, and consistent event classification across all 31 SecurityEventType categories. Critical security events are properly logged with appropriate severity levels, enabling enterprise-grade security monitoring and compliance.",
+      "completedAt": "2025-07-10T12:33:20.912Z"
     },
     {
       "id": "869394d3-a3ae-4a62-9405-78ece0f2398e",
