feat: Implement Threat Detection System with pattern recognition and risk scoring
- Added SecurityEventData interface with threat detection fields (riskScore, patterns, reason, success).
- Created EnvConfigSchema for environment configuration including rate limiting and MFA settings.
- Developed comprehensive documentation for the Threat Detection System outlining features, architecture, and usage.
- Implemented EmailService for sending security notifications (new device sign-in, MFA enabled, password reset).
- Introduced Redis client for managing threat detection data and patterns.
- Created templates for email notifications related to security events.
- Established a testing framework for threat detection with conceptual test scenarios.
- Developed ThreatDetectionEngine for analyzing security events, extracting patterns, and calculating risk scores.
- Added automated response actions based on risk assessment results.

--- a/.shrimp/launchsaasfast/tasks.json
+++ b/.shrimp/launchsaasfast/tasks.json
@@ -46,14 +46,14 @@
       "name": "Implement Threat Detection System",
       "description": "Create intelligent threat detection system to identify suspicious patterns like repeated failed logins, unusual geolocation access, and anomalous user behavior. Implement automated response mechanisms.",
       "notes": "Focus on practical threat patterns relevant to SaaS applications. Avoid false positives that could impact user experience.",
-      "status": "pending",
+      "status": "completed",
       "dependencies": [
         {
           "taskId": "7d363afa-a988-4789-a7e9-54a580e846f3"
         }
       ],
       "createdAt": "2025-07-10T11:54:15.350Z",
-      "updatedAt": "2025-07-10T11:54:15.350Z",
+      "updatedAt": "2025-07-10T14:12:50.257Z",
       "relatedFiles": [
         {
           "path": "lib/threat-detection.ts",
@@ -75,17 +75,19 @@
       ],
       "implementationGuide": "1. Create lib/threat-detection.ts with pattern analysis\\n2. Implement anomaly detection algorithms\\n3. Define threat scoring system\\n4. Create automated response mechanisms\\n5. Integration with security logging system\\n\\nPseudocode:\\n```typescript\\nclass ThreatDetector {\\n  async analyzeEvent(event: SecurityEvent): Promise<ThreatAssessment> {\\n    const patterns = await this.detectPatterns(event);\\n    const riskScore = this.calculateRiskScore(patterns);\\n    \\n    if (riskScore > THREAT_THRESHOLD) {\\n      await this.triggerResponse(event, riskScore);\\n    }\\n    \\n    return { riskScore, patterns, actions: [] };\\n  }\\n}\\n```",
       "verificationCriteria": "Threat detection system identifies suspicious patterns, calculates accurate risk scores, implements appropriate automated responses, and integrates seamlessly with existing security infrastructure.",
-      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering."
+      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering.",
+      "summary": "Threat Detection System successfully implemented with comprehensive pattern analysis including brute force detection, velocity anomaly detection, geographic anomaly detection, temporal pattern analysis, risk scoring algorithm, automated response mechanisms, middleware integration, Redis-based analytics storage, email notification integration, and complete documentation. System provides real-time threat assessment and automated security responses.",
+      "completedAt": "2025-07-10T14:12:50.251Z"
     },
     {
       "id": "ab64b362-5d0f-41fb-901b-f61929ba86e3",
       "name": "Setup Resend Email Integration",
       "description": "Integrate Resend for transactional emails including security notifications, device verification, and 2FA communications. Create email templates using React Email with proper styling and responsive design.",
       "notes": "Use background queue for email processing to avoid blocking request response. Implement proper error handling and retry logic.",
-      "status": "pending",
+      "status": "completed",
       "dependencies": [],
       "createdAt": "2025-07-10T11:54:15.350Z",
-      "updatedAt": "2025-07-10T11:54:15.350Z",
+      "updatedAt": "2025-07-10T14:12:36.421Z",
       "relatedFiles": [
         {
           "path": "lib/email/resend-client.ts",
@@ -110,7 +112,9 @@
       ],
       "implementationGuide": "1. Setup Resend client configuration\\n2. Create email templates with React Email\\n3. Implement email service layer\\n4. Add background job processing for emails\\n5. Integration with security events for notifications\\n\\nPseudocode:\\n```typescript\\nclass EmailService {\\n  async sendSecurityNotification(type: SecurityNotificationType, user: User, context: any) {\\n    const template = this.getTemplate(type);\\n    const email = await template.render(user, context);\\n    \\n    await this.queue.add('send-email', {\\n      to: user.email,\\n      subject: email.subject,\\n      html: email.html\\n    });\\n  }\\n}\\n```",
       "verificationCriteria": "Email service successfully sends transactional emails, templates render correctly, background queue processes emails reliably, and all email types integrate with security events.",
-      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering."
+      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering.",
+      "summary": "Resend Email Integration successfully completed with comprehensive email service implementation including client configuration, service layer, React Email templates for security notifications, proper error handling, environment variable validation, and TypeScript type safety. All requirements met including transactional emails, device verification, 2FA communications, responsive design, and proper Resend API integration.",
+      "completedAt": "2025-07-10T14:12:36.419Z"
     }
   ]
 }
