--- a/application/package.json
+++ b/application/package.json
@@ -13,6 +13,7 @@
     "gen:types": "npx supabase gen types typescript --project-id $PROJECT_ID --schema public > types/supabase.ts"
   },
   "dependencies": {
+    "@react-email/components": "^0.2.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.4",
     "@upstash/redis": "^1.35.1",
@@ -22,6 +23,8 @@
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.1.0",
+    "resend": "^4.6.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
