--- a/application/package.json
+++ b/application/package.json
@@ -13,18 +13,27 @@
     "gen:types": "npx supabase gen types typescript --project-id $PROJECT_ID --schema public > types/supabase.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.2.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.4",
     "@upstash/redis": "^1.35.1",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "next-themes": "^0.4.6",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.1.0",
+    "react-hook-form": "^7.60.0",
     "resend": "^4.6.0",
+    "sonner": "^2.0.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -48,7 +57,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
-    "zod": "^4.0.0"
+    "zod": "^4.0.4"
   }
 }
