--- a/.shrimp/launchsaasfast/tasks.json
+++ b/.shrimp/launchsaasfast/tasks.json
@@ -103,7 +103,7 @@
       "name": "Pages d'Authentification avec Validation Temps Réel",
       "description": "Créer les pages d'authentification complètes (/signin, /signup) pour LaunchSaasFast avec validation temps réel côté client, intégration device verification, et UX moderne. Pages doivent utiliser Shadcn/ui + React Hook Form, intégrer le hook useAuth, afficher device confidence scoring, et supporter tous les auth flows incluant 2FA.",
       "notes": "Pages critiques pour onboarding utilisateurs. Doivent respecter UX moderne et intégrer seamlessly avec infrastructure sécurité existante. Performance optimisée pour Core Web Vitals.",
-      "status": "pending",
+      "status": "in_progress",
       "dependencies": [
         {
           "taskId": "916b8018-e430-4840-b24b-76ace244876b"
@@ -113,7 +113,7 @@
         }
       ],
       "createdAt": "2025-07-10T20:46:18.224Z",
-      "updatedAt": "2025-07-10T20:46:18.224Z",
+      "updatedAt": "2025-07-11T11:14:48.794Z",
       "relatedFiles": [
         {
           "path": "/app/signin/page.tsx",
