--- a/application/package.json
+++ b/application/package.json
@@ -23,6 +23,7 @@
     "@upstash/redis": "^1.35.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
