--- a/application/package.json
+++ b/application/package.json
@@ -18,8 +18,10 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.2.0",
+    "@sentry/nextjs": "^9.38.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.4",
+    "@types/nodemailer": "^6.4.17",
     "@upstash/redis": "^1.35.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -27,6 +29,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
