--- a/application/package.json
+++ b/application/package.json
@@ -14,7 +14,8 @@
     "@supabase/supabase-js": "^2.50.5",
     "next": "15.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
