feat: implement new API client and authentication hooks, refactor existing auth functions for improved structure and error handling

--- a/.shrimp/launchsaasfast/tasks.json
+++ b/.shrimp/launchsaasfast/tasks.json
@@ -42,14 +42,14 @@
       "name": "Routes API Authentication Core",
       "description": "Implémentation des routes d'authentification essentielles : signin, signup, signout, refresh et me. Chaque route utilise le middleware et valide les données avec Zod avant traitement Supabase.",
       "notes": "Utiliser les schémas Zod existants. Assurer cohérence avec les fonctions client actuelles.",
-      "status": "in_progress",
+      "status": "completed",
       "dependencies": [
         {
           "taskId": "2a67dbbb-471b-474b-b35c-2d188f40fadc"
         }
       ],
       "createdAt": "2025-07-14T00:39:11.724Z",
-      "updatedAt": "2025-07-14T00:46:43.233Z",
+      "updatedAt": "2025-07-14T00:50:31.709Z",
       "relatedFiles": [
         {
           "path": "app/api/auth/signin/route.ts",
@@ -84,21 +84,23 @@
       ],
       "implementationGuide": "1. Créer /app/api/auth/signin/route.ts\\n2. Créer /app/api/auth/signup/route.ts\\n3. Créer /app/api/auth/signout/route.ts\\n4. Créer /app/api/auth/refresh/route.ts\\n5. Créer /app/api/auth/me/route.ts\\n6. Utiliser les schémas Zod existants de lib/auth/schemas.ts\\n\\nPseudocode signin/route.ts:\\n```typescript\\nexport async function POST(request: Request) {\\n  try {\\n    // 1. Parser et valider avec Zod\\n    const body = await request.json()\\n    const { email, password } = signinSchema.parse(body)\\n    \\n    // 2. Authentifier avec Supabase\\n    const { data, error } = await supabase.auth.signInWithPassword({\\n      email, password\\n    })\\n    \\n    // 3. Gérer réponse\\n    if (error) return errorResponse(error)\\n    return successResponse(data)\\n  } catch (error) {\\n    return handleAPIError(error)\\n  }\\n}\\n```",
       "verificationCriteria": "5 routes auth fonctionnelles, validation Zod active, authentification Supabase intégrée, gestion d'erreurs cohérente, tests avec curl/Postman réussis",
-      "analysisResult": "Migration complète vers API REST Next.js avec architecture modulaire sécurisée, intégrant middleware d'authentification @supabase/ssr, validation Zod universelle, et transition progressive du client-side vers server-side pour améliorer sécurité, performance et maintenabilité."
+      "analysisResult": "Migration complète vers API REST Next.js avec architecture modulaire sécurisée, intégrant middleware d'authentification @supabase/ssr, validation Zod universelle, et transition progressive du client-side vers server-side pour améliorer sécurité, performance et maintenabilité.",
+      "summary": "Routes d'authentification API implémentées avec succès. 5 routes créées : /api/auth/signin (POST), /api/auth/signup (POST), /api/auth/signout (POST), /api/auth/refresh (POST), /api/auth/me (GET). Chaque route utilise validation Zod avec schémas existants, middleware Supabase SSR, gestion d'erreurs centralisée, et formats de réponse standardisés. Compilation TypeScript sans erreurs, routes accessibles et fonctionnelles avec middleware de sécurité actif. Protection Method Not Allowed implémentée pour toutes les méthodes HTTP non autorisées.",
+      "completedAt": "2025-07-14T00:50:31.700Z"
     },
     {
       "id": "00d08196-4359-4366-a0e6-6a9f57cfe773",
       "name": "Client HTTP API et Adaptateur",
       "description": "Création d'un client HTTP unifié pour remplacer les appels Supabase directs. Implémentation d'un adaptateur maintenant la compatibilité avec les fonctions existantes pendant la migration.",
       "notes": "Maintenir la signature des fonctions existantes pour compatibilité. Permettre migration progressive.",
-      "status": "pending",
+      "status": "completed",
       "dependencies": [
         {
           "taskId": "ef122780-4cf8-4528-94e5-a186cec5c080"
         }
       ],
       "createdAt": "2025-07-14T00:39:11.724Z",
-      "updatedAt": "2025-07-14T00:39:11.724Z",
+      "updatedAt": "2025-07-14T00:59:29.587Z",
       "relatedFiles": [
         {
           "path": "lib/api/client.ts",
@@ -123,7 +125,9 @@
       ],
       "implementationGuide": "1. Créer lib/api/client.ts avec fonctions HTTP\\n2. Créer lib/api/auth-client.ts adaptateur\\n3. Implémenter intercepteurs pour tokens automatiques\\n4. Gestion d'erreurs et retry logic\\n5. Types de retour compatibles avec l'existant\\n\\nPseudocode lib/api/client.ts:\\n```typescript\\nclass APIClient {\\n  private baseURL = '/api'\\n  \\n  async post<T>(endpoint: string, data: any): Promise<T> {\\n    const response = await fetch(`${this.baseURL}${endpoint}`, {\\n      method: 'POST',\\n      headers: { 'Content-Type': 'application/json' },\\n      body: JSON.stringify(data)\\n    })\\n    \\n    if (!response.ok) throw new APIError(response)\\n    return response.json()\\n  }\\n}\\n\\n// Adaptateur compatible\\nexport const signIn = async (email: string, password: string) => {\\n  return apiClient.post('/auth/signin', { email, password })\\n}\\n```",
       "verificationCriteria": "Client HTTP fonctionnel, adaptateur compatible avec fonctions existantes, gestion d'erreurs robuste, intercepteurs tokens opérationnels, types TypeScript corrects",
-      "analysisResult": "Migration complète vers API REST Next.js avec architecture modulaire sécurisée, intégrant middleware d'authentification @supabase/ssr, validation Zod universelle, et transition progressive du client-side vers server-side pour améliorer sécurité, performance et maintenabilité."
+      "analysisResult": "Migration complète vers API REST Next.js avec architecture modulaire sécurisée, intégrant middleware d'authentification @supabase/ssr, validation Zod universelle, et transition progressive du client-side vers server-side pour améliorer sécurité, performance et maintenabilité.",
+      "summary": "Client HTTP API et adaptateur créés avec succès. APIClient unifié avec gestion d'erreurs spécialisées, timeouts, retry logic et intercepteurs. Adaptateur auth-client.ts maintient compatibilité totale avec signatures existantes (signIn, signUp, signOut, getCurrentUser). Hook React useAuth inclus pour faciliter migration frontend. Classes d'erreurs typées (ValidationError, AuthenticationError, etc.). Compilation TypeScript sans erreurs. Architecture prête pour migration progressive des appels Supabase directs vers API REST locale.",
+      "completedAt": "2025-07-14T00:59:29.586Z"
     },
     {
       "id": "72a2c5e1-9858-4b90-8291-a90349baf3d5",
