--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@prisma/client": "^6.12.0",
+    "@tanstack/react-query": "^5.83.0",
+    "autoprefixer": "^10.4.21",
     "next": "15.4.2",
+    "next-auth": "^4.24.11",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,7 +35,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   },
   "lint-staged": {
